--- a/src/main/resources/assets/somanyenchantments/lang/en_us.lang
+++ b/src/main/resources/assets/somanyenchantments/lang/en_us.lang
@@ -1,3 +1,3 @@
 enchantment.somanyenchantments.subjectbiology.desc=Increases damage against special enemies like Blights, Infernals and Champions.
 enchantment.somanyenchantments.subjecthistory.desc=Increases damage the longer the user stays in the same spot.
-enchantment.somanyenchantments.subjectgeography.desc=Increases damage and changes the damage type of attacks depending on the biome a player is in.
+enchantment.somanyenchantments.subjectgeography.desc=Changes the damage type of attacks depending on the biome the user is in and applies fitting potion effects.
